# moserial

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  meson.build  moserial.doap  org.gnome.moserial.Devel.yaml
data/: Makefile.am  meson.build  moserial.1  moserial.appdata.xml.in  moserial.desktop.in  moserial.gresource.xml
data/glade/: Makefile.am  moserial.glade  moserial.ui
data/icons/: Makefile.am
data/icons/128x128/apps/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/64x64/apps/: Makefile.am
data/icons/scalable/apps/: Makefile.am
data/ui/: Makefile.am  mainwindow.ui  preferences.ui  receive_chooser.ui  receive_progress.ui  record_dialog.ui  send_chooser_dialog.ui  send_progress_dialog.ui  settings_dialog.ui  xmodem_filename_dialog.ui
doc/: ChangeLog  Makefile.am  moserial.omf.in
doc/C/: index.docbook  moserial.xml
doc/cs/: cs.po
doc/de/: de.po
doc/el/: el.po
doc/es/: es.po
doc/fr/: fr.po
doc/pl/: pl.po
doc/sl/: sl.po
doc/sv/: sv.po
doc/uk/: uk.po
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.mo  zh_TW.po
src/: AutoScroll.vala  Config.vapi  DefaultPaths.vala  HexTextBuffer.vala  InputParser.vala  Main.vala  MainWindow.vala  MoUtils.vala  Preferences.vala  PreferencesDialog.vala  Profile.vala  ReceiveChooserDialog.vala  ReceiveProgressDialog.vala  RecordDialog.vala  Rzwrapper.vala  SendChooserDialog.vala  SendProgressDialog.vala  SerialConnection.vala  SerialStreamRecorder.vala  Settings.vala  SettingsDialog.vala  Szwrapper.vala  XmodemFilenameDialog.vala  meson.build  posix.vapi
