include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = moserial
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES =	figures/main-toolbar.png \
		figures/statusbar.png \
		figures/port-setup.png \
		figures/connect.png \
		figures/disconnect.png \
		figures/outgoing.png \
		figures/received-tabs.png \
		figures/sent-tabs.png \
		figures/record.png \
		figures/record-dialog.png \
		figures/stop-recording.png \
		figures/receive-file.png \
		figures/send-file-dialog.png \
		figures/send-file.png \
		figures/send-progress.png \
		figures/receive-progress.png \
		figures/receive-file-dialog.png \
		figures/preferences.png \
		figures/authorizations.png
DOC_LINGUAS = de sv
