@YELP_HELP_RULES@

HELP_ID = moserial
HELP_FILES = index.docbook
HELP_EXTRA = legal.xml
HELP_MEDIA = figures/main-toolbar.png \
		figures/statusbar.png \
		figures/port-setup.png \
		figures/connect.png \
		figures/disconnect.png \
		figures/outgoing.png \
		figures/received-tabs.png \
		figures/sent-tabs.png \
		figures/record.png \
		figures/record-dialog.png \
		figures/stop-recording.png \
		figures/receive-file.png \
		figures/send-file-dialog.png \
		figures/send-file.png \
		figures/send-progress.png \
		figures/receive-progress.png \
		figures/receive-file-dialog.png \
		figures/preferences.png
HELP_LINGUAS = cs de el es fr pl sl sv uk
